prevent terminal from collapsing too far

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -13,6 +13,7 @@ body {
 #terminal {
   height: 640px;
   width: 700px;
+  min-width: 700px;
 }
 
 #terminal .xterm-bold {
